packages/daisyui/src/components/mockup.css
.mockup-code {
  @layer daisyui.l1.l2.l3 {
    @apply bg-neutral text-neutral-content rounded-box relative overflow-hidden overflow-x-auto py-5;
    font-size: 0.875rem;
    direction: ltr;

    &:before {
      content: "";
      @apply mb-4 block h-3 w-3 rounded-full opacity-30;
      box-shadow:
        1.4em 0,
        2.8em 0,
        4.2em 0;
    }

    pre {
      @apply pr-5;

      &:before {
        content: "";
        margin-right: 2ch;
      }

      &[data-prefix] {
        &:before {
          --tw-content: attr(data-prefix);
          content: var(--tw-content);
          @apply inline-block w-8 text-right opacity-50;
        }
      }
    }
  }
}

.mockup-window {
  @layer daisyui.l1.l2.l3 {
    @apply rounded-box relative flex flex-col overflow-hidden overflow-x-auto pt-5;

    &:before {
      content: "";
      @apply mb-4 block aspect-square h-3 shrink-0 self-start rounded-full opacity-30;
      box-shadow:
        1.4em 0,
        2.8em 0,
        4.2em 0;
    }
    [dir="rtl"] &:before {
      @apply self-end;
    }

    pre[data-prefix] {
      &:before {
        --tw-content: attr(data-prefix);
        content: var(--tw-content);
        @apply inline-block text-right;
      }
    }
  }
}

.mockup-browser {
  @layer daisyui.l1.l2.l3 {
    @apply rounded-box relative overflow-hidden overflow-x-auto;

    pre[data-prefix] {
      &:before {
        --tw-content: attr(data-prefix);
        content: var(--tw-content);
        @apply inline-block text-right;
      }
    }

    .mockup-browser-toolbar {
      @apply my-3 inline-flex w-full items-center pr-[1.4em] rtl:flex-row-reverse;

      &:before {
        content: "";
        @apply mr-[4.8rem] inline-block aspect-square h-3 rounded-full opacity-30;
        box-shadow:
          1.4em 0,
          2.8em 0,
          4.2em 0;
      }

      .input {
        @apply bg-base-200 mx-auto flex h-full items-center gap-2 overflow-hidden text-ellipsis whitespace-nowrap;
        font-size: 0.75rem;
        direction: ltr;

        &:before {
          content: "";
          @apply size-4 opacity-50;
          background-color: currentColor;
          mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z' clip-rule='evenodd' /%3E%3C/svg%3E")
            no-repeat center;
          mask-size: contain;
        }
      }
    }
  }
}

.mockup-phone {
  @layer daisyui.l1.l2.l3 {
    @apply inline-grid justify-items-center;
    border: 5px solid #6b6b6b;
    border-radius: 65px;
    background-color: #000;
    padding: 6px;
    overflow: hidden;
    width: 100%;
    max-width: 462px;
    aspect-ratio: 462 / 978;
    @supports (corner-shape: superellipse(1.45)) {
      border-radius: 90px;
      corner-shape: superellipse(1.45);
    }
  }
}
.mockup-phone-camera {
  @layer daisyui.l1.l2.l3 {
    grid-column: 1/1;
    grid-row: 1/1;
    background: #000;
    height: 3.7%;
    width: 28%;
    border-radius: 17px;
    z-index: 1;
    margin-top: 3%;
  }
}
.mockup-phone-display {
  @layer daisyui.l1.l2.l3 {
    border-radius: 54px;
    grid-column: 1/1;
    grid-row: 1/1;
    overflow: hidden;
    width: 100%;
    height: 100%;
    @supports (corner-shape: superellipse(1.87)) {
      border-radius: 101px;
      corner-shape: superellipse(1.87);
    }
    & > img {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }
  }
}

